// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`downloadFromUrl Downloads from url 1`] = `
Object {
  "click": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "href": "https://www.example.com/download",
  "style": Object {
    "display": "none",
  },
}
`;

exports[`downloadFromUrl Uses filename if provided 1`] = `
Object {
  "click": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "download": "mockFileName",
  "href": "https://www.example.com/download",
  "style": Object {
    "display": "none",
  },
}
`;
